--- a/src/main/java/html실습/tag.html
+++ b/src/main/java/html실습/tag.html
@@ -31,7 +31,8 @@
     <q>인용할 문구를 표현, 따옴표가 나타남! 글자와 같이 나열되어지며 짧은 부분의 인용을 표현할 때 사용!</q>
 
 </p>
-<!--<blockquote>긴 인용문을 담을 때 사용!, 박스와 같은 성격</blockquote>-->
+
+<blockquote>긴 인용문을 담을 때 사용!, 박스와 같은 성격</blockquote>
 
 <p>
     <!--형광펜 효과!-->
@@ -79,10 +80,14 @@
     type specimen book.</br>
     It has survived not only five centuries, <em>but also the leap</em> into electronic typesetting,</br>
     remaining essentially unchanged.</br>
-    It was popularised in the 1960s with the release of <mark>Letraset sheets containing</br>
-    Lorem Ipsum passages,</mark> and more recently with desktop <q>publishing software like Aldus PageMaker including versions of
+    It was popularised in the 1960s with the release of
+    <mark>Letraset sheets containing</br>
+        Lorem Ipsum passages,
+    </mark>
+    and more recently with desktop <q>publishing software like Aldus PageMaker including versions of
     Lorem Ipsum.</q>
 </p>
+
 
 </br>
 </br>
@@ -93,10 +98,10 @@
 
 <p>
     엔티티(entity) : html에서 예약된 문자! 16진수의 엔티티 숫자~!<br/>
-<!--< &lt;= &#60;(보다 작은)
-    > &gt;= &62; (보다 큰)
-    공백 >> &nbsp = &#160(줄바꿈 없는 공백)
-    -->
+    <!--< &lt;= &#60;(보다 작은)
+        > &gt;= &62; (보다 큰)
+        공백 >> &nbsp = &#160(줄바꿈 없는 공백)
+        -->
     &#60;특수&#160;&#160;&#160;&#160;&#160;문자 표현&#62;
 </p>
 
