--- a/src/main/java/css/css이론.html
+++ b/src/main/java/css/css이론.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width = divice-width,initial-scale = 1.0">
+    <meta name="viewport" content="width = device-width,initial-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS 기초</title>
     <link href="style.css" rel="stylesheet" type="text/css"/><!--외부스타일시트 css방법-->
@@ -21,15 +21,14 @@
         }*/
 
         #aa{
-        color:blueviolet;
+        color:blue violet;
         }
         #bb{
-        color:cadetblue;
+        color:cadet-blue;
         }
         .cc{
         font-size:50px;
         }
-
     </style>
 </head>
 <body>
@@ -65,11 +64,6 @@
     특정한 이름을 부여하여 선택하는 선택자로,html화면 내에서 하나의 이름으로 여러군데 여러번 사용 가능!<br/>
     주로 작은 요소,작은 단락,변화가 잦을 스타일
 </p>
-
-
-
-
-
 
 </body>
 </html>
