--- a/src/main/java/css/box.html
+++ b/src/main/java/css/box.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width = device-width,initial-scale = 1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>div</title>
     <style>
         *{
         padding:0;
         margin:0;
         }
+
         div{
         background-color:aquamarine;
         font-size:30px;
         font-weight:900px;
         /*box-size에 영향을 주는 스타일*/
+
         width:300px; /*넚이,가로폭 = px,%,auto */
         height:300px; /*높이, 세로폭 = px,%,auto*/
         border:5px solid #000; /*선,선의 굵기 - 선의스타일 - 선의색상*/
