--- a/src/main/java/css/Float/FLOAT.html
+++ b/src/main/java/css/Float/FLOAT.html
@@ -18,7 +18,7 @@
 <body>
 <!--float:박스를 옆으로 나열 할 때 사용/떠다니는~/레이아웃을 나열하거나 형성+삽화를 넣을 때-->
 <div>
-    <img src="img1/cam1.png" alt=" "/>
+    <img src="../div/img1/cam1.png" alt=" "/>
     <h1>title</h1>
     <p>
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
